@@ -1,4 +1,7 @@
 -----------------------------------------------------
+x200019a(410):__NR_sigsuspend_nocancel ignore
+-----------------------------------------------------
+-----------------------------------------------------
 x20001a4(420):__NR_sem_wait_nocancel 1s 0m
 -----------------------------------------------------
 Syscall param sem_wait(sem) contains uninitialised byte(s)
